# ai-engineering-projects

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MOVING_PROJECT.md  Makefile  PROJECT_INDEX.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_SUMMARY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  best-practices.md  getting-started.md
projects/: README.md
projects/hallucination-resistant-rag/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  START_HERE.md  TESTING_RESULTS.md  USAGE_GUIDE.md  requirements.txt  test_gemini.py  test_system.py  test_ui_functionality.py  test_upload_qa.py
projects/hallucination-resistant-rag/src/: api.py  chunk.py  decision.py  embed.py  generate.py  ingest.py  llm.py  main.py  retrieve.py  testHF.py  upload.py
projects/hallucination-resistant-rag/web/: index.html  script.js  style.css
scripts/: create_project.py  lint.py  setup.py  test_all.py
